<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Memora</string>
    <string name="question_label">Question</string>
    <string name="question_hint">Question</string>
    <string name="answer_label">Answer</string>
    <string name="answer_hint">Answer</string>
    <string name="show_answer">Show Answer</string>
    <string name="hide_answer">Hide Answer</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="save_question">Save Question</string>
    <string name="add_subject">Add Subject</string>
    <string name="question_deleted">Question deleted.</string>
    <string name="question_added">Question added.</string>
    <string name="question_updated">Question updated.</string>
    <string name="create">Create</string>

    <string name="cancel">Cancel</string>
    <string name="edit_question">Edit Question</string>
    <string name="add_question">Add Question Here</string>
    <string name="no_questions">No questions exist under this subject now.</string>
    <string name="subject_exists">The subject "%1$s" already exists.</string>
    <string name="question_number">%1$s (%2$d of %3$d)</string>
    <string name="import_questions">Import</string>
    <string name="select_subject">Select a subject:</string>
    <string name="undo">Undo</string>
    <string name="error">Error on accessing AI</string>>


    <string name="settings">Settings</string>
    <string name="pref_title_theme">Dark Mode</string>
    <string name="pref_description_theme">Turn on dark mode</string>
    <string name="pref_title_default_question">Default question</string>
    <string name="pref_title_subject_order">Subject order</string>

    <string name="pref_none">None</string>
    <string name="enter_subject">Enter a new Subject</string>
    <string name="add_new_subject">Add a new Subject</string>
    <string-array name="pref_subject_order">
        <item>Alphabetic</item>
        <item>Newest first</item>
        <item>Oldest first</item>
    </string-array>

    <string-array name="pref_subject_order_values">
        <item>alpha</item>
        <item>new_first</item>
        <item>old_first</item>
    </string-array>

    <string-array name="motivation_quotes">
        <item>"Success is not final, failure is not fatal: it is the courage to continue that counts."</item>
        <item>"The only way to do great work is to love what you do."</item>
        <item>"Believe you can and you're halfway there."</item>
        <item>"Your time is limited, don't waste it living someone else's life."</item>
        <item>"The future belongs to those who believe in the beauty of their dreams."</item>
        <item>"Dream big, work hard, stay focused."</item>
        <item>"Your education is a dress rehearsal for a life that is yours to lead."</item>
        <item>"The expert in anything was once a beginner."</item>
        <item>"Learning is not attained by chance, it must be sought for with ardor."</item>
        <item>"Education is the passport to the future."</item>
        <item>"The beautiful thing about learning is that no one can take it away from you."</item>
        <item>"Knowledge is power. Information is liberating. "</item>
        <item>"The more that you read, the more things you will know."</item>
        <item>"Don't let what you cannot do interfere with what you can do."</item>
        <item>"Start where you are. Use what you have. Do what you can."</item>
    </string-array>
</resources>

