<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        app:key="dark_theme"
        app:title="@string/pref_title_theme"
        app:defaultValue="false" />

    <ListPreference
        app:defaultValue="alpha"
        app:entries="@array/pref_subject_order"
        app:entryValues="@array/pref_subject_order_values"
        app:key="subject_order"
        app:title="@string/pref_title_subject_order"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:key="default_question"
        app:title="@string/pref_title_default_question"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>

    <!--<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">-->

    <!--    <SwitchPreferenceCompat-->
    <!--        app:key="dark_theme"-->
    <!--        app:title="@string/pref_title_theme" />-->

    <!--    <ListPreference-->
    <!--        app:defaultValue="alpha"-->
    <!--        app:entries="@array/pref_subject_order"-->
    <!--        app:entryValues="@array/pref_subject_order_values"-->
    <!--        app:key="subject_order"-->
    <!--        app:title="@string/pref_title_subject_order"-->
    <!--        app:useSimpleSummaryProvider="true" />-->

    <!--    <EditTextPreference-->
    <!--        app:key="default_question"-->
    <!--        app:title="@string/pref_title_default_question"-->
    <!--        app:useSimpleSummaryProvider="true" />-->

    <!--</PreferenceScreen>-->
    <!-- res/xml/root_preferences.xml -->