<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F8E3">

    <!-- 无问题时的提示布局 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_question_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context="com.cs407.memora.QuestionActivity">

        <TextView
            android:id="@+id/no_question_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_questions"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/add_question_button" />

        <Button
            android:id="@+id/add_question_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_question"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/no_question_label_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 卡片式布局 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/question_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/show_question_layout"
            android:layout_width="match_parent"
            android:layout_height="690dp"
            tools:context="com.cs407.memora.QuestionActivity">

            <!-- 问题标题 -->

            <!-- 问题文本 -->
            <TextView
                android:id="@+id/question_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/question_label"
                android:textColor="#000000"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:hint="Type your question here."
                android:textColor="#000000"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_label_text_view" />

            <!-- 显示/隐藏答案按钮 -->

            <Button
                android:id="@+id/answer_button"
                android:layout_width="149dp"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#E8F8E3"
                android:text="@string/hide_answer"
                android:textColor="#0F0000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.068"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_text_view" />


            <Button
                android:id="@+id/ask_ai_button"
                android:layout_width="156dp"
                android:layout_height="46dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#E8F8E3"
                android:text="Ask AI"
                android:textColor="#070000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.627"
                app:layout_constraintStart_toEndOf="@id/answer_button"
                app:layout_constraintTop_toBottomOf="@id/question_text_view" />

            <TextView
                android:id="@+id/answer_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/answer_label"
                android:textColor="#000000"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/answer_button" />

            <TextView
                android:id="@+id/answer_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:hint="Type your answer here."
                android:textColor="#000000"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/answer_label_text_view" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- 底部 Logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/memora_logo" />

        <TextView
            android:id="@+id/motivation_quote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text=""
            android:textStyle="italic"
            android:textSize="16sp"
            android:textColor="#333333"
            android:maxLines="2"
            android:gravity="center_vertical"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


